--- a/src/app/pages/components/header/header.component.css
+++ b/src/app/pages/components/header/header.component.css
@@ -4,14 +4,68 @@ header {
   background: var(--orange);
 }
 
+
+.header-block {
+  max-width: 1000px;
+  min-width: 300px;
+  height: 450px;
+  background: var(--blue);
+  border-radius: 8px;
+  box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.5);
+
+  position: relative;
+  z-index: 10;
+  padding: 10px;
+  margin: 0 auto;
+}
+
+.header-block img {
+  width: 57%;
+  position: absolute;
+  right: 2%;
+  bottom: 1.2%;
+
+  transform: translateX(79px);
+  transition: transform 0.8s ease;
+}
+
+.header-block .text {
+  position: absolute;
+  bottom: 30%;
+  left: 15%;
+}
+
+.header-block .text h2 {
+  color: white;
+  margin-bottom: 20px;
+  text-align: right;
+  transform: translateX(-20px);
+  transition: transform 0.5s;
+}
+
+.header-block .text p {
+  max-width: 280px;
+  color: white;
+  text-align: right;
+  transform: translateX(-20px);
+  transition: transform 0.4s;
+}
+
+/* NAV-HEADER */
+
 nav {
-  width: 100%;
+  max-width: 1000px;
+  min-width: 300px;
   height: 125px;
 
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  margin: 0 auto;
 }
 
 nav ul {
@@ -55,59 +109,5 @@ nav ul button:hover {
   cursor: pointer;
 }
 
-.content {
-  max-width: 1000px;
-  min-width: 300px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-}
 
-.content .header-block {
-  max-width: 1000px;
-  min-width: 300px;
-  height: 450px;
-  background: var(--blue);
-  border-radius: 8px;
-  box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.5);
-
-  position: relative;
-  z-index: 10;
-  padding: 10px;
-}
-
-.header-block img {
-  width: 57%;
-  position: absolute;
-  right: 2%;
-  bottom: 1.2%;
-
-  transform: translateX(79px);
-  transition: transform 0.8s ease;
-}
-
-.header-block .text {
-  position: absolute;
-  bottom: 30%;
-  left: 15%;
-}
-
-.header-block .text h2 {
-  color: white;
-  margin-bottom: 20px;
-  text-align: right;
-  transform: translateX(-20px);
-  transition: transform 0.5s;
-}
-
-.header-block .text p {
-max-width: 280px;
-color: white;
-text-align: right;
-transform: translateX(-20px);
-transition: transform 0.4s;
-}
 
